--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Ozair",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
